variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: not found: value NbOr
while (2 * nbBisc != NbOr + 1 ){
                     ^