variables.RunHalf.scala.code
var nbBisc = 0
var nbOr = 0

while (2 * nbBisc != NbOr + 1 ){
  avance()
  if (estSurBiscuit()){
    nbBisc = nbBisc + 1
  }
  if (estSurOrange){
    nbOr = nbOr + 1
  }
}